[card] fixing font-size on safari with no media on small

--- a/src/_components/card/card.css
+++ b/src/_components/card/card.css
@@ -66,7 +66,6 @@ a.card:hover {
 }
 
 .card--small-media .card-title {
-  font-size: 25px;
   margin: 0;
 }
 
@@ -76,4 +75,8 @@ a.card:hover {
 
 .card--small-media--reverse .card-media--img {
   border-radius: 0 10px 10px 0;
+}
+
+.card-media + .card--small-media .card-title {
+  font-size: 25px;
 }
